fix title vertical alignment

--- a/client/homebrew/navbar/navbar.less
+++ b/client/homebrew/navbar/navbar.less
@@ -102,11 +102,11 @@
 			// TITLE ITEM
 			&.brewTitle {							//  Navbar should move to CSS Grid, and this item allowed 
 													// to move under the rest of the buttons of the navbar at small screen sizes.  
-				display          : block;
+				display          : flex;
+				justify-content: center;
 				width: 100%;
 				overflow         : hidden;
 				text-overflow    : ellipsis;
-				text-align       : center;
 				text-transform   : initial;	
 				white-space      : nowrap;
 				.save {
